# src/Api/V1/Routes/protocolRoutes.ts
@@ -5,13 +5,7 @@ const router = Router();
 const protocolController = new ProtocolController();
 
 router.get("/closed", protocolController.listClosed.bind(protocolController));
-router.get(
-  "/closed/:id",
-  protocolController.getClosed.bind(protocolController),
-);
-router.get(
-  "/closed/:id/snapshot",
-  protocolController.getClosedSnapshot.bind(protocolController),
-);
+router.get("/closed/:id", protocolController.getClosed.bind(protocolController));
+router.get("/closed/:id/snapshot", protocolController.getClosedSnapshot.bind(protocolController));
 
 export default router;
